issue: when opening some pages the navbar get shifted to the top ???

--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -66,3 +66,7 @@ $theme: matx.define-theme(
 .focusable:focus-within {
   outline: 2px solid #4b5e84;
 }
+
+body {
+  overflow-y: scroll;
+}
